# yana

./: .gitignore  PLUGIN_DEVELOPMENT_GUIDE.md  README.md  UPDATE.md  USAGE.md  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri-android-release.yml  tauri-release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  LICENSE  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_picker.rs  gallery.rs  image_hosts.rs  lib.rs  main.rs  process.rs  s3.rs  settings.rs  thumbnail.rs  upload.rs
src/components/: BottomBar.vue  GalleryItemCard.vue  GlobalSelect.vue  ImagePreviewModal.vue  PluginPicker.vue  Sidebar.vue  Titlebar.vue
src/composables/: useCardRegistration.ts
src/directives/: vRegisterCard.ts
src/plugins/: registry.ts  s3.js  sda1.js  smms.js
src/stores/: batchSelect.ts  device.ts  imageHosts.ts  settings.ts  theme.ts
src/types/: gallery.ts  imageHostPlugin.ts  tauri-plugin-shims.d.ts
src/utils/: clipboard.ts  retry.ts
src/views/: CompressView.vue  GalleryView.vue  ImageHostSettingsView.vue  SettingsView.vue  UploadView.vue
